# network-beacon_NRF54L15

./: .gitignore  Kurzanleitung.md
Network_Base_nrf51422/: app.c  app.h  button.c  button.h  console_output.c  console_output.h  led.c  led.h  main.c  nus.c  nus.h  projectmap.md  radio.c  radio.h
Network_Base_nrf51422/Makefile_Linker/: Makefile
Network_Base_nrf51422/config/: sdk_config.h
Network_Base_nrf54/: CMakeLists.txt  domains.md  prj.conf  projectmap.md
Network_Base_nrf54/src/: led.c  led.h  main.c  nus.c  nus.h  radio.c  radio.h
Network_Beacon_nrf54/: AI_CONTRACT.md  ARCHITECTURE.md  CMakeLists.txt  DECISIONS.md  pm_static.yml  prj.conf  projectmap.md
Network_Beacon_nrf54/src/: defines.h  device.c  device.h  led.c  led.h  main.c  network.c  network.h  network_dev.c  network_storage.c  network_storage.h  nus.c  nus.h  param_storage.c  param_storage.h  radio.c  radio.h  radio_ids.c  radio_ids.h  self_report.c  self_report.h
Network_Control_nrf51422/: main.c  main.h
Network_Control_nrf51422/Makefile_Linker/: Makefile  ble_app_seuchen_gcc_nrf51.ld
Network_Control_nrf51422/config/: nrf_drv_config.h  nrf_drv_config_10028.h  sdk_config.h
shared/: common_include.h
